--- a/Vidly/Views/Movies/Lol.cshtml
+++ b/Vidly/Views/Movies/Lol.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lolskdjs";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>sohimey</h2>
 
 <p>Hello this is lol page!</p>
 
