--- a/Vidly/Views/Customers/Customer.cshtml
+++ b/Vidly/Views/Customers/Customer.cshtml
@@ -1,8 +1,8 @@
 ﻿
 @{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "Customer";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Contact</h2>
+<h2>Customer</h2>
 
