--- a/Vidly/Views/Customers/hand.cshtml
+++ b/Vidly/Views/Customers/hand.cshtml
@@ -1,8 +1,8 @@
-﻿
+﻿ 
 @{
-    ViewBag.Title = "Contact";
+    ViewBag.Title = "hand";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Contact</h2>
+<h2>hand</h2>
 
