--- a/Vidly/Views/Shared/_Layout.cshtml
+++ b/Vidly/Views/Shared/_Layout.cshtml
@@ -3,12 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Done by Dilara</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
 </head>
-<body>
+<body> 
     @*Html.Partial("_NavBar", Model.Movie)*@
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
@@ -22,9 +22,9 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Customers", "Index", "Home")</li> 
-                    <li>@Html.ActionLink("Movies", "Index", "Movies")</li>
-                    @*<li>@Html.ActionLink("View Movies","Index","Movies")</li>*@
+                    <li>@Html.ActionLink("Customers", "Index", "Customers")</li>
+                    <li>@Html.ActionLink("Movies", "Index", "Movies")</li> 
+                    <li>@Html.ActionLink("Stores","Random","Movies")</li>
                     @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                 </ul>
                 @Html.Partial("_LoginPartial")
@@ -35,7 +35,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Done by Dilara</p>@*the name shown in the bottom of the website*@
         </footer>
     </div>
 
