--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -14,7 +14,7 @@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.bDay)
-        @Html.TextBoxFor(m => m.Customer.bDay, "{0:d MMM yyyy}", new { @class = "form-control" })
+        @Html.TextBoxFor(m => m.Customer.bDay, "{0:d MMM yyyy}", new { @class = "form-control" }) @*form-control gives a good look*@
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
