--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -8,17 +8,21 @@
 
 @using (@Html.BeginForm("Save", "Customers"))
 {
+    @Html.ValidationSummary()
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.Name)
         @Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
-    </div>
-    <div class="form-group">
-        @Html.LabelFor(m => m.Customer.bDay)
-        @Html.TextBoxFor(m => m.Customer.bDay, "{0:d MMM yyyy}", new { @class = "form-control" }) @*form-control gives a good look*@
+        @Html.ValidationMessageFor(m => m.Customer.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Customer.MembershipTypeId)
         @Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "MembershipName"), "Select Membership Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.Customer.bDay)
+        @Html.TextBoxFor(m => m.Customer.bDay, "{0:d MMM yyyy}", new { @class = "form-control" }) @*form-control gives a good look*@
+        @Html.ValidationMessageFor(m => m.Customer.bDay)
     </div>
     <div class="checkbox">
         <label>
@@ -26,6 +30,11 @@
         </label>
     </div>
     @Html.HiddenFor(m => m.Customer.Id) @*took id in a hidden field*@
+    @Html.AntiForgeryToken()
     <button type="submit" class="btn btn-primary">Save</button>
 }
 
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+}
