--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -12,11 +12,12 @@
 }
 else
 {
-    <table class="table table-bordered table-hover">
+    <table id="customers" class="table table-bordered table-hover">
         <thead>
             <tr>
                 <th>Customer</th>
                 <th>Membership Name</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -25,9 +26,22 @@ else
                 <tr>
                     <td>@Html.ActionLink(customer.Name,"Edit","Customers",new {id=customer.Id},null) </td> @*the 4th parameter is sent to Edit*@
                     <td>@customer.MembershipType.MembershipName</td> 
+                    <td>
+                        <button class="btn-link js-delete">Delete</button>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
 }
 
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#customers .js-delete").on("click", function () {
+                confirm("Are you sure you want to delete this customer?")
+            });
+        });
+    </script>
+}
