--- a/Vidly/Views/Movies/NewMovie.cshtml
+++ b/Vidly/Views/Movies/NewMovie.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.ViewModels.MovieFormViewModel 
+﻿@model Vidly.ViewModels.MovieFormViewModel
 @{
     ViewBag.Title = "NewMovie";
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -8,22 +8,32 @@
 
 @using (@Html.BeginForm("Save", "Movies"))
 {
+    @Html.ValidationSummary()
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Name)
-        @Html.TextBoxFor(m => m.Movie.Name, new { @class="form-control"})
+        @Html.TextBoxFor(m => m.Movie.Name, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Name)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.ReleaseDate)
-        @Html.TextBoxFor(m => m.Movie.ReleaseDate,"{0:d MMM yyyy}", new {@class="form-control"})
+        @Html.TextBoxFor(m => m.Movie.ReleaseDate, "{0:d MMM yyyy}", new { @class = "form-control" })
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.GenreId)
-        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.GenreIds, "Id","GenreName"), "Please select the Genre Type", new {@class = "form-control"})
+        @Html.DropDownListFor(m => m.Movie.GenreId, new SelectList(Model.GenreIds, "Id", "GenreName"), "Please select the Genre Type", new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.GenreId)
     </div>
     <div class="form-group">
         @Html.LabelFor(m => m.Movie.Stock)
-        @Html.TextAreaFor(m => m.Movie.Stock, new {@class = "form-control"})
+        @Html.TextAreaFor(m => m.Movie.Stock, new { @class = "form-control" })
+        @Html.ValidationMessageFor(m => m.Movie.Stock)
     </div>
     @Html.HiddenFor(m => m.Movie.Id)
-    <button type="submit" class="btn btn-primary">Save</button>   
+    @Html.AntiForgeryToken()
+    <button type="submit" class="btn btn-primary">Save</button>
+}
+
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
 }
