--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -1,16 +1,27 @@
 ﻿@model IEnumerable<Vidly.Models.Customer>
+@*
+    Note: I've set the model for this view to IEnumerable<Customer>.
+    This is a simple interface implemented by the list class. Since
+    in this view we only want to iterate over this list, and we don't
+    need any of the operations in the List class (eg Add, Remove, etc),
+    it's better to use the IEnumerable interface, which allows use to
+    iterate over the list. If in the future, we replace the List with a
+    different data structure, as long as it is enumerable, our view code
+    will remain unchanged.
+*@
+
 @{
     ViewBag.Title = "Customers";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Customers</h2>
-@*we don't need any models here since we have ajax script below*@
+
 <table id="customers" class="table table-bordered table-hover">
     <thead>
         <tr>
             <th>Customer</th>
-            <th>Membership Name</th>
+            <th>Membership Type</th>
             <th>Delete</th>
         </tr>
     </thead>
@@ -20,21 +31,21 @@
 @section scripts
 {
     <script>
-        $(document).ready(function() {
+        $(document).ready(function () {
             $("#customers").DataTable({
                 ajax: {
                     url: "/api/customers",
-                    dataSrc:""
+                    dataSrc: ""
                 },
-                columns: [ @*case-sensitive, take care*@
+                columns: [
                     {
                         data: "name",
                         render: function (data, type, customer) {
-                            return "<a href='/customers/edit" + customer.id + "'>" + customer.name + "</a>";
+                            return "<a href='/customers/edit/" + customer.id + "'>" + customer.name + "</a>";
                         }
                     },
                     {
-                        data:"name"
+                        data: "membershipType.membershipName"
                     },
                     {
                         data: "id",
@@ -45,20 +56,19 @@
                 ]
             });
 
-        @*the popup section*@
-            $("#customers").on("click",".js-delete",function () {
+
+            $("#customers").on("click", ".js-delete", function () {
                 var button = $(this);
 
                 bootbox.confirm("Are you sure you want to delete this customer?", function (result) {
                     if (result) {
                         $.ajax({
-                            url: "/api/customers/" + $(this).attr("data-customer-id"),
+                            url: "/api/customers/" + button.attr("data-customer-id"),
                             method: "DELETE",
                             success: function () {
                                 button.parents("tr").remove();
                             }
                         });
-
                     }
                 });
             });
