--- a/Vidly/Views/Movies/Index.cshtml
+++ b/Vidly/Views/Movies/Index.cshtml
@@ -9,11 +9,12 @@
         @Html.ActionLink("New Movie", "New", "Movies", null, new { @class = "btn btn-primary" })
     </p>
     
-    <table class=" table table-bordered table-hover">
+    <table id="movies" class=" table table-bordered table-hover">
         <thead>
             <tr>
                 <th>Movie</th>
                 <th>Genre</th>
+                <th>Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -22,9 +23,33 @@
                 <tr>
                     <td>@Html.ActionLink(movie.Name,"Edit","Movies",new {id=movie.Id},null)</td>
                     <td>@movie.Genre.GenreName</td>
+                    <td>
+                        <button data-movie-id="@movie.Id" class="btn-link js-delete">Delete</button>
+                    </td>
                 </tr>
             }
         </tbody>
     </table>
 
+@section scripts
+{
+    <script>
+        $(document).ready(function () {
+            $("#movies .js-delete").on("click", function () {
+                var button = $(this);
+
+                if (confirm("Are you sure you want to delete this movie?")) {
+                    $.ajax({
+                        url: "/api/movie/" + button.attr("data-movie-id"),
+                        method: "DELETE",
+                        success: function () {
+                            button.parents("tr").remove();
+                        }
+                    });
+                }
+
+            });
+        });
+    </script>
+}
     
